[gd_scene load_steps=11 format=3 uid="uid://cpa40cvanoyei"]

[ext_resource type="Script" uid="uid://c0fpibsuil0bo" path="res://scripts/house/top_door.gd" id="1_0d6bc"]
[ext_resource type="Texture2D" uid="uid://b4j3lagoesvil" path="res://assets/textures/interiors/New Piskel.png" id="1_y4oiy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l58uu"]
atlas = ExtResource("1_y4oiy")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emia"]
atlas = ExtResource("1_y4oiy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t748k"]
atlas = ExtResource("1_y4oiy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhqok"]
atlas = ExtResource("1_y4oiy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwdn5"]
atlas = ExtResource("1_y4oiy")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jacc7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l58uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emia")
}],
"loop": false,
"name": &"close",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t748k")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhqok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwdn5")
}],
"loop": false,
"name": &"open",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkkwc"]
size = Vector2(2, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_135k8"]
size = Vector2(14, 15)

[node name="StaticBody2D" type="StaticBody2D"]
collision_layer = 2
collision_mask = 90
script = ExtResource("1_0d6bc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -8)
sprite_frames = SubResource("SpriteFrames_jacc7")
autoplay = "default"

[node name="BlockPlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(14, -8)
shape = SubResource("RectangleShape2D_pkkwc")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(8, -8)
collision_layer = 2
collision_mask = 8

[node name="PlayerDetect" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_135k8")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
